--- a/styles/objects.css
+++ b/styles/objects.css
@@ -106,5 +106,5 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   z-index: 10;
+   z-index: 1;
 }
