--- a/styles/utilities.css
+++ b/styles/utilities.css
@@ -267,6 +267,10 @@
    margin-block-start: var(--m-3);
 }
 
+.u-mb-start-4 {
+   margin-block-start: var(--m-4);
+}
+
 .u-mb-start-5 {
    margin-block-start: var(--m-5);
 }
